some login and controllers stuff

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,7 @@
-.span7
+.span6.offset1
   .hero-unit
     %h1 Home Manager
     %p Easily manage tasks at home and stay productive.
+.span4.offset2
+  .sign-in
+    = link_to 'Sign In', "/auth/facebook", :class => 'btn btn-large btn-block btn-success'
