header works properly, moved login button

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,7 +1,9 @@
-.span6.offset1
-  .hero-unit
+.span8
+  .hero-unit{align: "center"}
     %h1 Home Manager
-    %p Easily manage tasks at home and stay productive.
-.span4.offset2
-  .sign-in
-    = link_to 'Sign In', "/auth/facebook", :class => 'btn btn-large btn-block btn-success'
+    %p Make managing tasks at home fun and productive.
+    %p
+      -if 1 == 2
+        = link_to 'Sign In', "/auth/facebook", :class => 'btn btn-large btn-success'
+      -else
+        = link_to 'Sign Out', signout_path, :class => 'btn btn-large btn-danger'
