--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,26 +1,33 @@
-= form_for(@user) do |f|
-  - if @user.errors.any?
-    #error_explanation
-      %h2
-        = pluralize(@user.errors.count, "error")
-        prohibited this user from being saved:
-      %ul
-        - @user.errors.full_messages.each do |msg|
-          %li= msg
-  .field
-    = f.label :name
-    = f.text_field :name
-  .field
-    = f.label :facebook_id
-    = f.text_field :facebook_id
-  .field
-    = f.label :thumbnail
-    = f.text_field :thumbnail
-  .field
-    = f.label :parent_id
-    = f.number_field :parent_id
-  .field
-    = f.label :theme_id
-    = f.number_field :theme_id
-  .actions
-    = f.submit
+.well.span8
+  = form_for(@user) do |f|
+    - if @user.errors.any?
+      #error_explanation
+        %h2
+          = pluralize(@user.errors.count, "error")
+          prohibited this user from being saved:
+        %ul
+          - @user.errors.full_messages.each do |msg|
+            %li= msg
+    %dl{class: "dl-horizontal"}
+      %dt
+        .field
+        %h5 Name
+      %dd
+        = f.text_field :name, placeholder: "Name"
+      %dt
+        .field
+          %h5 ID
+      %dd
+        = f.text_field :facebook_id, disabled: true
+      %dt
+        .field
+          %h5 Profile Photo
+      %dd
+        = f.text_field :thumbnail, placeholder: "URL"
+      %dt
+        .field
+          %h5 Parent ID
+      %dd
+        = f.text_field :parent_id, placeholder: "Link to parent", value: ("#{User.find_by_id(@user.parent_id).facebook_id}" if @user.parent_id != nil)
+        .actions
+          = f.submit "Save", class: "btn btn-small"
