--- a/app/views/users/_card.html.haml
+++ b/app/views/users/_card.html.haml
@@ -18,10 +18,23 @@
     %h3 Tasks
     %table.table{align: "center"}
       %tr
-        %th Today
-        %th This Week
-        %th This Month
-      %tr
+        %td= link_to 'Today', user_tasks_path(user)
         %td= @todays.select {|t| t[:user_id] == user.id }.count
+      %tr
+        %td{:colspan => "2"}
+          .progress.progress
+            .bar{:style => "width: 20%;"}
+      %tr
+        %td= link_to 'Week', user_tasks_path(user)
         %td= @this_weeks.select {|t| t[:user_id] == user.id }.count
+      %tr
+        %td{:colspan => "2"}
+          .progress.progress
+            .bar{:style => "width: 20%;"}
+      %tr
+        %td= link_to 'Month', user_tasks_path(user)
         %td= @this_months.select {|t| t[:user_id] == user.id }.count
+      %tr
+        %td{:colspan => "2"}
+          .progress.progress
+            .bar{:style => "width: 20%;"}
