--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -5,41 +5,25 @@
   = link_to " Add task", new_task_path, class: "i icon-plus label label-success"
   %h4 Today
   %table.table
-    %tr
-      %th Title
-      %th Description
-      %th
-      %th
     - @todays.each do |task|
       %tr
         %td= link_to task.title, task
-        %td= task.description
-        %td= link_to 'Edit', edit_task_path(task)
-        %td= link_to 'Destroy', task, confirm: 'Are you sure?', method: :delete
-  %br/
+        %td
+          %a.btn{:href => "#"}
+            %i.icon-ok
   %h4 This Week
   %table.table
-    %tr
-      %th Title
-      %th Description
-      %th
-      %th
     - @this_weeks.each do |task|
       %tr
         %td= link_to task.title, task
-        %td= task.description
-        %td= link_to 'Edit', edit_task_path(task)
-        %td= link_to 'Destroy', task, confirm: 'Are you sure?', method: :delete
+        %td
+          %a.btn{:href => "#"}
+            %i.icon-ok
   %h4 This Month
   %table.table
-    %tr
-      %th Title
-      %th Description
-      %th
-      %th
     - @this_months.each do |task|
       %tr
         %td= link_to task.title, task
-        %td= task.description
-        %td= link_to 'Edit', edit_task_path(task)
-        %td= link_to 'Destroy', task, confirm: 'Are you sure?', method: :delete
+        %td
+          %a.btn{:href => "#"}
+            %i.icon-ok
