--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,40 +1,39 @@
-.well.span8
-  = form_for(@user) do |f|
-    - if @user.errors.any?
-      #error_explanation
-        %h2
-          = pluralize(@user.errors.count, "error")
-          prohibited this user from being saved:
-        %ul
-          - @user.errors.full_messages.each do |msg|
-            %li= msg
-    %dl{class: "dl-horizontal"}
+= form_for(@user) do |f|
+  - if @user.errors.any?
+    #error_explanation
+      %h2
+        = pluralize(@user.errors.count, "error")
+        prohibited this user from being saved:
+      %ul
+        - @user.errors.full_messages.each do |msg|
+          %li= msg
+  %dl{class: "dl-horizontal"}
+    %dt
+      .field
+      %h5 Name
+    %dd
+      = f.text_field :name, placeholder: "Name"
+    %dt
+      .field
+        %h5 ID
+    %dd
+      = f.text_field :facebook_id, disabled: true
+    %dt
+      .field
+        %h5 Parent ID
+    %dd
+      = f.text_field :parent_id, placeholder: "Link to parent", value: (if @user.facebook_id != current_user.facebook_id then "#{current_user.facebook_id}" end)
+    -if @user.facebook_id == "" || @user.facebook_id == nil
       %dt
         .field
-        %h5 Name
+          %h5 Profile Photo
       %dd
-        = f.text_field :name, placeholder: "Name"
-      %dt
         .field
-          %h5 ID
-      %dd
-        = f.text_field :facebook_id, disabled: true
-      %dt
-        .field
-          %h5 Parent ID
-      %dd
-        = f.text_field :parent_id, placeholder: "Link to parent", value: "#{current_user.facebook_id}"
-      -if @user.facebook_id == "" || @user.facebook_id == nil
-        %dt
-          .field
-            %h5 Profile Photo
-        %dd
-          .field
-            = f.radio_button :thumbnail, "User1.png"
-            = image_tag('User1.png', :class => 'img-rounded', :size => "50x50")
-            = f.radio_button :thumbnail, "User2.png"
-            = image_tag('User2.png', :class => 'img-rounded', :size => "50x50")
-            = f.radio_button :thumbnail, "User3.png"
-            = image_tag('User3.png', :class => 'img-rounded', :size => "50x50")
-      .actions{align: "right"}
-        = f.submit "Save", class: "btn btn-small"
+          = f.radio_button :thumbnail, "User1.png"
+          = image_tag('User1.png', :class => 'img-rounded', :size => "50x50")
+          = f.radio_button :thumbnail, "User2.png"
+          = image_tag('User2.png', :class => 'img-rounded', :size => "50x50")
+          = f.radio_button :thumbnail, "User3.png"
+          = image_tag('User3.png', :class => 'img-rounded', :size => "50x50")
+    .actions
+      = f.submit "Save", class: "btn btn-small"
