progress bars work.

--- a/app/views/users/_card.html.haml
+++ b/app/views/users/_card.html.haml
@@ -19,22 +19,37 @@
     %table.table{align: "center"}
       %tr
         %td= link_to 'Today', user_tasks_path(user)
-        %td= @todays.select {|t| t[:user_id] == user.id }.count
+        %td
+          - today_complete = Completion.where(completed: Date.today.to_s, user_id: user.id, task_id: @todays.collect(&:id)).count
+          = today_complete
+          = "/"
+          - today_total = @todays.select {|t| t[:user_id] == user.id }.count
+          = today_total
       %tr
         %td{:colspan => "2"}
           .progress.progress
-            .bar{:style => "width: 20%;"}
+            .bar{:style => "width: #{today_complete.to_f/today_total.to_f*100}%;"}
       %tr
         %td= link_to 'Week', user_tasks_path(user)
-        %td= @this_weeks.select {|t| t[:user_id] == user.id }.count
+        %td
+          - this_week_complete = Completion.where(completed: Date.today.to_s, user_id: user.id, task_id: @this_weeks.collect(&:id)).count
+          = this_week_complete
+          = "/"
+          - this_week_total = @this_weeks.select {|t| t[:user_id] == user.id }.count
+          = this_week_total
       %tr
         %td{:colspan => "2"}
           .progress.progress
-            .bar{:style => "width: 20%;"}
+            .bar{:style => "width: #{this_week_complete.to_f/this_week_total.to_f*100}%;"}
       %tr
         %td= link_to 'Month', user_tasks_path(user)
-        %td= @this_months.select {|t| t[:user_id] == user.id }.count
+        %td
+          - this_month_complete = Completion.where(completed: Date.today.to_s, user_id: user.id, task_id: @this_months.collect(&:id)).count
+          = this_month_complete
+          = "/"
+          - this_month_total = @this_months.select {|t| t[:user_id] == user.id }.count
+          = this_month_total
       %tr
         %td{:colspan => "2"}
           .progress.progress
-            .bar{:style => "width: 20%;"}
+            .bar{:style => "width: #{this_month_complete.to_f/this_month_total.to_f*100}%;"}
