completions can clear, changed task show

--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -71,5 +71,5 @@
         Occurs once on:
       %dd
         = f.text_field :custom_start
-      .actions
-        = f.submit "Save", class: "btn btn-small"
+      .actions{align: "right"}
+        = f.submit "Save", class: "btn btn-success"
