--- a/app/views/tasks/new.html.haml
+++ b/app/views/tasks/new.html.haml
@@ -1,3 +1,7 @@
-%h2 New Task
-= render 'form'
-= link_to 'Back', tasks_path
+.span8
+  .well
+    %h2
+      New Task
+    =render 'form'
+  %p
+    = link_to 'Back', :back, class: "btn"
