--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -25,7 +25,7 @@
       %dd
         = f.text_area :description, rows: "3"
       %dd
-        Points
+        Credits
       %dd
         = f.text_field :points, class: "input-mini"
     %dt
