--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,6 +1,8 @@
 .span8
-  %h2 Family Members
-  = link_to " Add family member", new_user_path, class: "i icon-plus label label-success"
-  %p
-  -@users.each do |user|
-    =render partial: 'card', locals: { user: user }
+  .span5
+    %h2 Family Members
+  .span2
+    = link_to " Add member", new_user_path, class: "i icon-plus btn btn-success"
+  .span7
+    -@users.each do |user|
+      =render partial: 'card', locals: { user: user }
