--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,7 +1,7 @@
 .span8
   .hero-unit{align: "center"}
-    %h1 Home Manager
-    %p Make managing tasks at home fun and productive.
+    %h1 Chore Cart
+    %p Make chores at home fun and productive.
     %p
       -if current_user
         = link_to 'Sign Out', signout_path, :class => 'btn btn-large btn-danger'
