--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title Home Manager
+    %title Chore Chart
     <!--[if IE]><script scr="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
     = stylesheet_link_tag "application", :media => "all"
     = javascript_include_tag "application"
@@ -14,7 +14,7 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      %a.brand{:href => "#{root_url}"} Home Manager
+      %a.brand{:href => "#{root_url}"} Chore Chart
       .nav-collapse
         %ul.nav
           -if current_user
