--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,6 +1,6 @@
 .span8
   .hero-unit{align: "center"}
-    %h1 Chore Cart
+    %h1 Chore Chart
     %p Make chores at home fun and productive.
     %p
       -if current_user
