--- a/app/views/users/_card.html.haml
+++ b/app/views/users/_card.html.haml
@@ -14,7 +14,7 @@
         %tr
           %td
           %td= user.facebook_id
-    %h3= link_to 'Tasks', user_tasks_path(user)
+    %h3= link_to 'Chores', user_tasks_path(user)
     %table.table{align: "center"}
       %tr
         %td Today
