--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -1,7 +1,7 @@
 .span8
   .span4
     %h2
-      %em= @user.name + "'s"
+      %em= link_to "#{@user.name}'s", user_path(current_user)
       Chores
   .span2
     = link_to " Add chore", new_task_path, class: "i icon-plus btn btn-success"
