--- a/app/views/users/_card.html.haml
+++ b/app/views/users/_card.html.haml
@@ -1,3 +1,8 @@
+:javascript
+  function showStats(user_id){
+    $('#stats-' + user_id).toggle();
+  }
+
 .span8
   %div.well
     %table
@@ -14,47 +19,45 @@
               %h2
                 = user.credits
                 credits
-      -if user.parent_id == nil
+    %a{:onclick => "showStats(#{user.id});"} Show / Hide
+    %div{id: 'stats-' + user.id.to_s, hidden: true}
+      %h3= link_to 'Chores', user_tasks_path(user)
+      %table.table{align: "center"}
         %tr
+          %td Today
           %td
-          %td= user.facebook_id
-    %h3= link_to 'Chores', user_tasks_path(user)
-    %table.table{align: "center"}
-      %tr
-        %td Today
-        %td
-          - today_complete = Completion.where(completed: Date.today.to_s, user_id: user.id, task_id: @todays.collect(&:id)).count
-          = today_complete
-          = "/"
-          - today_total = @todays.select {|t| t[:user_id] == user.id }.count
-          = today_total
-      %tr
-        %td{:colspan => "2"}
-          .progress.progress
-            .bar{:style => "width: #{today_complete.to_f/today_total.to_f*100}%;"}
-      %tr
-        %td This Week
-        %td
-          - this_week_complete = Completion.where(completed: Date.today.to_s, user_id: user.id, task_id: @this_weeks.collect(&:id)).count
-          = this_week_complete
-          = "/"
-          - this_week_total = @this_weeks.select {|t| t[:user_id] == user.id }.count
-          = this_week_total
-      %tr
-        %td{:colspan => "2"}
-          .progress.progress
-            .bar{:style => "width: #{this_week_complete.to_f/this_week_total.to_f*100}%;"}
-      %tr
-        %td This Month
-        %td
-          - this_month_complete = Completion.where(completed: Date.today.to_s, user_id: user.id, task_id: @this_months.collect(&:id)).count
-          = this_month_complete
-          = "/"
-          - this_month_total = @this_months.select {|t| t[:user_id] == user.id }.count
-          = this_month_total
-      %tr
-        %td{:colspan => "2"}
-          .progress.progress
-            .bar{:style => "width: #{this_month_complete.to_f/this_month_total.to_f*100}%;"}
-    = link_to ' Edit', edit_user_path(user), class: "i icon-edit btn btn-info"
-    = link_to ' Remove', user, confirm: 'Are you sure?', method: :delete, class: "i icon-remove btn btn-danger"
+            - today_complete = Completion.where(completed: Date.today.to_s, user_id: user.id, task_id: @todays.collect(&:id)).count
+            = today_complete
+            = "/"
+            - today_total = @todays.select {|t| t[:user_id] == user.id }.count
+            = today_total
+        %tr
+          %td{:colspan => "2"}
+            .progress.progress
+              .bar{:style => "width: #{today_complete.to_f/today_total.to_f*100}%;"}
+        %tr
+          %td This Week
+          %td
+            - this_week_complete = Completion.where(completed: Date.today.to_s, user_id: user.id, task_id: @this_weeks.collect(&:id)).count
+            = this_week_complete
+            = "/"
+            - this_week_total = @this_weeks.select {|t| t[:user_id] == user.id }.count
+            = this_week_total
+        %tr
+          %td{:colspan => "2"}
+            .progress.progress
+              .bar{:style => "width: #{this_week_complete.to_f/this_week_total.to_f*100}%;"}
+        %tr
+          %td This Month
+          %td
+            - this_month_complete = Completion.where(completed: Date.today.to_s, user_id: user.id, task_id: @this_months.collect(&:id)).count
+            = this_month_complete
+            = "/"
+            - this_month_total = @this_months.select {|t| t[:user_id] == user.id }.count
+            = this_month_total
+        %tr
+          %td{:colspan => "2"}
+            .progress.progress
+              .bar{:style => "width: #{this_month_complete.to_f/this_month_total.to_f*100}%;"}
+      = link_to ' Edit', edit_user_path(user), class: "i icon-edit btn btn-info"
+      = link_to ' Remove', user, confirm: 'Are you sure?', method: :delete, class: "i icon-remove btn btn-danger"
